# CCRABProject

./: .dockerignore  .gitignore
apps/CCRABDashBoard/: manage.py  pyproject.toml
apps/CCRABDashBoard/CCRABDashboard/: api_permissions.py  api_views.py  asgi.py  context_processors.py  settings.py  settings_test.py  urls.py  urls_test.py  wsgi.py
apps/CCRABDashBoard/CCRABDashboard/api/: client.py  urls.py
apps/CCRABDashBoard/CCRABDashboard/tests/: test_api_client.py
apps/CCRABDashBoard/platforms_app/: __init__.py  admin.py  api_urls.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/CCRABDashBoard/platforms_app/management/commands/: _sensor_map_import_processor.py  _sensor_map_import_readers.py  export_purple_air_pipeline_config.py  import_platform_sensor_map.py
apps/CCRABDashBoard/platforms_app/migrations/: 0001_initial.py  0002_move_existing_tables_to_platforms_schema.py  0003_multi_obs_required_keys_unique_constraint.py  0004_multi_obs_indexes_checks_trigger.py  0005_qualify_postgis_trigger_functions.py  0006_sensor_platform_m_type_s_order_constraint.py  0007_obs_type_display_name.py  0008_alter_platformsource_unique_together_and_more.py  0009_multi_obs_platform_date_index.py
apps/CCRABDashBoard/platforms_app/templates/: base_platform.html  platform_info.html  platforms_catalog_base.html  platforms_map.html
apps/CCRABDashBoard/platforms_app/templates/components/: image_carousel.html
apps/CCRABDashBoard/platforms_app/templatetags/: custom_filters.py  ui_components.py
apps/CCRABDashBoard/platforms_app/tests/: test_admin_sensor_forms.py  test_data_endpoints.py  test_sensor_map_import.py
apps/CCRABDashBoard/projects_catalog/: admin.py  api_urls.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/CCRABDashBoard/projects_catalog/migrations/: 0001_initial.py  0002_move_existing_tables_to_projects_schema.py
apps/CCRABDashBoard/projects_catalog/templates/: _product_card_template.html  _projects_header_bar.html  project_catalog_detail.html  project_catalog_page_base.html  project_resource_detail.html  projects_index.html  projects_map.html
apps/CCRABDashBoard/projects_catalog/tests/: __init__.py  factories.py  test_api_detail_and_products.py  test_api_list_and_facets.py  test_auth_registration.py  test_frontend_auth_token_injection.py  test_helpers.py  test_models.py  test_resource_page.py  test_routes.py  test_serializers.py  test_web_data_endpoints.py
apps/CCRABDashBoard/static/css/: fonts.css  fonts_override.css  navbar.css
apps/CCRABDashBoard/static/css/bulma/: package.json
apps/CCRABDashBoard/static/js/CCRABApiClient/: README.md  package.json
apps/CCRABDashBoard/static/js/StatsTimeSeries/: README.md  package.json
apps/CCRABDashBoard/templates/: base_template.html  platform_map.html  top_navbar_template-skeletoncss.html  top_navbar_template.html  vue_test.html
apps/CCRABDashBoard/templates/admin/: app_list.html
apps/DataIngestion/: pyproject.toml
apps/DataIngestion/airflow/dags/: dusttrack_air_processing.py  purple_air_processing.py  survey123_processing.py  tsi_air_processing.py
infra/: .gitignore  (+3 more)
(+39 files in other folders)
