[project]
name = "airflowproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==3.1.3",
    "asyncpg>=0.30.0,<0.31.0",
    "datautilities",
    "django>=5.2.10,<6",
    "graphviz>=0.21",
    "ijson>=3.4.0.post0,<3.5.0",
    "ioos-qc>=2.3.0",
    "observationsdatabase",
    "psycopg2-binary>=2.9.10,<2.10.0",
    "django-environ>=0.12.0",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "djangorestframework-gis==1.2.0",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.16.8",
    "pydevd-pycharm~=253.31033.139",
]

[tool.uv.sources]
datautilities = { path = "../../packages/DataUtilities", editable = true }
observationsdatabase = { path = "../../packages/ObservationsDatabase", editable = true }
